# ComfyUI-Hunyuan3D-Part

./: .gitignore  README.md  __init__.py  comfy-env-root.toml  comfy-test.toml  install.py  prestartup_script.py  pyproject.toml  pytest.ini  requirements.txt  test_structure.py
.github/workflows/: pr-gate.yml  run-tests.yml  test.yml
.ipynb_checkpoints/: install-checkpoint.py  pyproject-checkpoint.toml
node_utils/: __init__.py  mesh_utils.py  model_loader.py
nodes/: __init__.py  bbox_io_nodes.py  bbox_visualization.py  cache.py  comfy-env.toml  exploded_viewer.py  face_ids_io_nodes.py  geometry_utils.py  loaders.py  memory.py  mesh_io.py  misc_utils.py  p3sam_node.py  p3sam_processing.py  processing.py  xpart_node.py  xpart_pipeline.py
nodes/.ipynb_checkpoints/: p3sam_node-checkpoint.py  xpart_node-checkpoint.py
nodes/core/: __init__.py  misc_utils.py  p3sam_models.py  p3sam_processing.py  sonata_model.py  xpart_pipeline.py
nodes/core/config/: infer.yaml  sonata.json
nodes/core/models/autoencoders/: model.py
nodes/core/models/conditioner/: condioner_release.py  sonata_extractor.py
nodes/core/models/sonata/: model.py
nodes/core/utils/: mesh_utils.py  misc.py
nodes/hunyuan3d_part/: conditioner.py  model.py  vae.py
nodes/p3sam/: model.py
nodes/sonata/: __init__.py  extractor.py  model.py  serialization.py  utils.py
p3sam/: README.md  model.py
p3sam/demo/: app.py  auto_mask.py  auto_mask_no_postprocess.py
tests/: __init__.py  conftest.py  test_imports.py
tests/integration/: __init__.py  test_workflows.py
web/: bbox_preview_widget.js  exploded_viewer.html  exploded_viewer_widget.js  viewer_vtk.html
workflows/: H3DPART-segment-partgen.json  H3DPART-segment.json  p3_segmentation.json  p3segmentation.json  segment-partgen.json  segment.json  segment_and_reconstruct.json  segment_partgen.json  segment_partgen_explodedview.json  xpart.json
xpart/partgen/: partformer_pipeline.py
xpart/partgen/bbox_estimator/: auto_mask_api.py
xpart/partgen/config/: infer.yaml
xpart/partgen/models/autoencoders/: attention_blocks.py
xpart/partgen/models/conditioner/: sonata_extractor.py
xpart/partgen/models/sonata/: model.py
xpart/partgen/utils/: mesh_utils.py  misc.py
