[project]
name = "comfyui-hunyuan3d-part"
description = "Hunyuan3D-Part nodes for ComfyUI: 3D part segmentation with P3-SAM and high-fidelity part generation with X-Part diffusion."
version = "0.1.2"
license = {file = "LICENSE"}
requires-python = ">=3.10"

# Standard dependencies that can be installed via pip
# CUDA-specific packages (spconv, torch-scatter, torch-cluster) are handled by install.py
dependencies = [
    # PyTorch (should already be installed by ComfyUI)
    "torch>=2.0.0",
    "torchvision",

    # 3D Mesh Processing
    "trimesh",
    "pymeshlab==2023.12.post3",

    # Deep Learning
    "diffusers",
    "timm",

    # Numerical Computing
    "numpy>=1.20.0",
    "scipy",
    "scikit-learn",
    "scikit-image",

    # Point Cloud Processing
    "fpsample",

    # Configuration & Utilities
    "addict",
    "omegaconf",
    "huggingface-hub",

    # Optimization
    "numba",

    # Additional Utilities
    "Pillow",
    "tqdm",
]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-Hunyuan3D-Part"
Documentation = "https://github.com/PozzettiAndrea/ComfyUI-Hunyuan3D-Part#readme"
"Bug Tracker" = "https://github.com/PozzettiAndrea/ComfyUI-Hunyuan3D-Part/issues"

# ComfyUI Registry configuration
[tool.comfy]
PublisherId = "pznodes"
DisplayName = "Hunyuan3D-Part"
Icon = ""