[project]
name = "ComfyUI-Hunyuan3D-Part"
description = "Hunyuan3D-Part nodes for ComfyUI: 3D part segmentation with P3-SAM and high-fidelity part generation with X-Part diffusion."
version = "0.1.4"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-Hunyuan3D-Part"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "Hunyuan3D-Part"
Icon = ""
